deploy/k8s/app/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: activitiesapp-api
  namespace: activitiesapp
spec:
  selector:
    app: activitiesapp-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
