deploy/k8s/app/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: activitiesapp-web
  namespace: activitiesapp
spec:
  selector:
    app: activitiesapp-web
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
